==> apache/nuttx/arch/arm/src/rp2040/rp2040_dmac.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <assert.h>
#include <debug.h>
#include <errno.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/semaphore.h>
#include "arm_internal.h"
#include "hardware/rp2040_dma.h"
#include "rp2040_dmac.h"

void weak_function arm_dma_initialize(void)
{
  int i;

  dmainfo("Initialize DMAC\n");

  /* Initialize the channel list  */

  nxsem_init(&g_dmac.exclsem, 0, 1);
  nxsem_init(&g_dmac.chansem, 0, RP2040_DMA_NCHANNELS);

  for (i = 0; i < RP2040_DMA_NCHANNELS; i++)
    {
      g_dmach[i].chan = i;
      putreg32(0, RP2040_DMA_CTRL_TRIG(i));
    }

  putreg32(0, RP2040_DMA_INTE0);
  putreg32(RP2040_DMA_INTS0_MASK, RP2040_DMA_INTS0);

  /* Attach DMA completion interrupt handler */

  irq_attach(RP2040_DMA_IRQ_0, rp2040_dmac_interrupt, NULL);
  up_enable_irq(RP2040_DMA_IRQ_0);
}

DMA_HANDLE rp2040_dmachannel(void)
{
  struct dma_channel_s *dmach;
  unsigned int ch;
  uint32_t bit = 0;
  int ret;

  /* Take a count from the channel counting semaphore.  We may block
   * if there are no free channels.  When we get the count, then we can
   * be assured that a channel is available in the channel list and is
   * reserved for us.
   */

  ret = nxsem_wait_uninterruptible(&g_dmac.chansem);
  if (ret < 0)
    {
      return NULL;
    }

  /* Get exclusive access to the DMA channel list */

  ret = nxsem_wait_uninterruptible(&g_dmac.exclsem);
  if (ret < 0)
    {
      nxsem_post(&g_dmac.chansem);
      return NULL;
    }

  /* Search for an available DMA channel */

  for (ch = 0, dmach = NULL; ch < RP2040_DMA_NCHANNELS; ch++)
    {
      struct dma_channel_s *candidate = &g_dmach[ch];
      if (!candidate->inuse)
        {
          dmach        = candidate;
          dmach->inuse = true;

          bit = 1 << ch;
          break;
        }
    }

  nxsem_post(&g_dmac.exclsem);

  setbits_reg32(bit, RP2040_DMA_INTS0);
  setbits_reg32(bit, RP2040_DMA_INTE0);

  /* Since we have reserved a DMA descriptor by taking a count from chansem,
   * it would be a serious logic failure if we could not find a free channel
   * for our use.
   */

  DEBUGASSERT(dmach);
  return (DMA_HANDLE)dmach;
}

void rp2040_dmafree(DMA_HANDLE handle)
{
  struct dma_channel_s *dmach = (struct dma_channel_s *)handle;
  unsigned int ch;

  DEBUGASSERT(dmach != NULL && dmach->inuse);
  ch  = dmach->chan;
  dmainfo("DMA channel %d\n", ch);

  /* Disable the channel */

  setbits_reg32(1 << dmach->chan, RP2040_DMA_CHAN_ABORT);
  putreg32(0, RP2040_DMA_CTRL_TRIG(ch));
  clrbits_reg32(1 << dmach->chan, RP2040_DMA_INTE0);
  clrbits_reg32(1 << dmach->chan, RP2040_DMA_INTS0);

  /* Mark the channel no longer in use.  Clearing the in-use flag is an
   * atomic operation and so should be safe.
   */

  dmach->inuse = false;

  /* And increment the count of free channels... possibly waking up a
   * thread that may be waiting for a channel.
   */

  nxsem_post(&g_dmac.chansem);
}

void rp2040_dmastart(DMA_HANDLE handle, dma_callback_t callback, void *arg)
{
  struct dma_channel_s *dmach = (struct dma_channel_s *)handle;
  uint32_t ch;

  DEBUGASSERT(dmach && dmach->inuse);
  ch = dmach->chan;

  /* Save the DMA complete callback info */

  dmach->callback = callback;
  dmach->arg      = arg;

  /* Enable the channel */

  setbits_reg32(RP2040_DMA_CTRL_TRIG_EN, RP2040_DMA_CTRL_TRIG(ch));
}

void rp2040_dmastop(DMA_HANDLE handle)
{
  struct dma_channel_s *dmach = (struct dma_channel_s *)handle;
  uint32_t bit;
  uint32_t stat;

  DEBUGASSERT(dmach);
  bit = 1 << dmach->chan;

  /* Disable the channel */

  setbits_reg32(bit, RP2040_DMA_CHAN_ABORT);

  do
    {
      stat = getreg32(RP2040_DMA_CHAN_ABORT);
    }
  while (stat & bit);
}
